--- a/landingPage/template/template.html
+++ b/landingPage/template/template.html
@@ -56,19 +56,13 @@
 
       <h3 contenteditable="true">Work Experience</h3>
       <ul id="work-experience" data-key="workExperience">
-        <li class="editable" contenteditable="true" data-placeholder="Add your experience here...">
-          Assisted in setting up and managing network devices and ensuring system reliability.
-        </li>
-        <li class="editable" contenteditable="true" data-placeholder="Add your experience here...">
-          Worked on small-scale web development projects using React and Node.js.
-        </li>
+   
       </ul>
       <button id="addWork">Add Work Experience</button>
 
       <h3 contenteditable="true">Certifications</h3>
       <ul   data-key="certifications">
-        <li class="editable" contenteditable="true"  >Google IT Support Professional Certificate</li>
-        <li class="editable"  contenteditable="true" >Introduction to Cybersecurity - Cisco Networking Academy</li>
+    
       </ul>
       <button id="addCertification">Add Certification</button>
 
@@ -83,7 +77,7 @@
       <button id="addSkill">Add Skill</button>
     </div>
   </section>
-  <button class="pdf-btn">Download Pdf</button>
+  <button class="pdf-btn">Download </button>
 
   <script src="template.js"></script>
 
